fix badly aligned items in references tablet view

--- a/css/references.css
+++ b/css/references.css
@@ -147,7 +147,7 @@
     
 @media screen and (min-width: 625px) and (max-width: 918px) {
     .references_content{
-		width: 580px;
+		width: 574px;
 		margin: 22px auto 0px auto;
 	}
 	.references-intro {
